<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alarm_homedesign"
    tools:context=".Alarm.HomeScreen">

    <TextView
        android:id="@+id/txtAlarm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:fontFamily="casual"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarmclock"
        />
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:layout_marginTop="20dp"
        android:theme="@style/MyTimePickerWidgetStyle"
        style="@style/MyTimePickerWidgetStyle"
        android:timePickerMode="spinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlarm"/>
    <View
        android:id="@+id/clockView"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent2">
    </View>
    <TextView
        android:id="@+id/txtRepeat"
        app:layout_constraintTop_toBottomOf="@+id/clockView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:text="@string/snooze"
        android:fontFamily="casual"
        android:layout_marginStart="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/snooze"
        app:layout_constraintTop_toBottomOf="@+id/clockView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorAccent2"
        android:textSize="21sp"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp" />
    <View
        android:id="@+id/snooze_below"
        app:layout_constraintTop_toBottomOf="@+id/snooze"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent2"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="80dp">
    </View>
    <TextView
        android:id="@+id/lbl_repeat"
        app:layout_constraintTop_toBottomOf="@+id/snooze_below"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:text="@string/repeat"
        android:fontFamily="casual"
        android:layout_marginStart="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/repeatAlarm"
        app:layout_constraintTop_toBottomOf="@+id/snooze_below"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorAccent2"
        android:textSize="21sp"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp" />

    <View
        android:id="@+id/repeat_below"
        app:layout_constraintTop_toBottomOf="@+id/repeatAlarm"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent2"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="80dp">
    </View>
    <Button
        android:id="@+id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@+id/repeat_below"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:text="@string/add_alarm"
        android:textAllCaps="false"
        android:background="@drawable/alarm_button_background"
        />
    <Button
        android:id="@+id/btnView"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:text="@string/view_alarms"
        android:textAllCaps="false"
        android:background="@drawable/alarm_view_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>