<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#22D3BFBF"
    tools:context=".TODO_List.MainActivity_Todo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/titlepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/todotitle"
                    android:textColor="#FFF"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/subtitlepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/subquait"
                    android:textColor="#B4B6C6"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAddNew"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:background="@drawable/todo_bgbtnnew"
                android:text="+"
                android:textColor="#FFF"
                android:textSize="38sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="#F63EA5" />

        <SearchView
            android:id="@+id/searchlist"
            android:hapticFeedbackEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/todo_bg_search_todo"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:queryHint="Search Here ...."
            android:iconifiedByDefault="false">
        </SearchView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ourtodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="16dp">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/endpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/endtext"
        android:textAlignment="center"
        android:textColor="#9A9A9A"
        android:textSize="16sp" />



</LinearLayout>



