<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4F4F4"
    tools:context=".TODO_List.UpdateAndDelete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titlepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="28dp"
            android:gravity="center_horizontal"
            android:text="@string/titleupdatepage"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="#F63EA5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="22dp"
        android:paddingTop="22dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/todo_bgitemtodo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addtitle"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="Event Title"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/titletodo"
                android:inputType="text"
                android:background="@drawable/todo_bginputtask"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="What You Do?"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adddesc"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="Description"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/desctodo"
                android:inputType="text"
                android:background="@drawable/todo_bginputtask"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="How to?"
                android:maxLength="50"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adddate"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="Timeline"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/datetodo"
                android:inputType="text"
                android:background="@drawable/todo_bginputtask"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="When will?"/>
        </LinearLayout>
    </LinearLayout>

   <Button
       android:id="@+id/updatebtn"
       android:layout_width="match_parent"
       android:layout_height="55dp"
       android:layout_marginLeft="16dp"
       android:layout_marginTop="20dp"
       android:layout_marginRight="16dp"
       android:background="@drawable/todo_bgbtncreate"
       android:text="@string/updatebtn"
       android:textAllCaps="false"
       android:textColor="#FFF"
       android:textSize="24sp"></Button>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/todo_bgbtncancel"
        android:text="@string/deletebtn"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="24sp"></Button>


</LinearLayout>